--- a/oasis-webapp/src/main/resources/templates/messages_it.xlf
+++ b/oasis-webapp/src/main/resources/templates/messages_it.xlf
@@ -182,11 +182,6 @@
         <target>Esci</target>
         <note priority="1" from="description">Form submit button; global sign-out</note>
       </trans-unit>
-      <trans-unit id="3208540886437471103" datatype="html">
-        <source><x id="APP_NAME"/> wants to:</source>
-        <target><x id="APP_NAME"/> vuole :</target>
-        <note priority="1" from="description">Introduce list of required (and not already granted) scopes</note>
-      </trans-unit>
       <trans-unit id="3342471433315777526" datatype="html">
         <source>We've sent you an email with an activation link, click on that link to activate your account.</source>
         <target>Ti abbiamo inviato un'email con un link di attivazione; clicca sul link per attivare il tuo account.</target>
@@ -371,6 +366,11 @@
         <source>Manage my network</source>
         <target>Gestisci la mia rete</target>
         <note priority="1" from="description">Soflty deleted organization notification action label</note>
+      </trans-unit>
+      <trans-unit id="7285596352322007191" datatype="html">
+        <source><x id="APP_NAME"/> would like to:</source>
+        <target><x id="APP_NAME"/> vorrebbe:</target>
+        <note priority="1" from="description">Introduce list of required (and not already granted) scopes</note>
       </trans-unit>
       <trans-unit id="7378878529334768232" datatype="html">
         <source>Reject</source>
