--- a/oasis-webapp/src/main/resources/templates/messages_tr.xlf
+++ b/oasis-webapp/src/main/resources/templates/messages_tr.xlf
@@ -19,7 +19,7 @@
       </trans-unit>
       <trans-unit id="235553805622646291" datatype="html">
         <source>Your account has been created but needs to be activated by confirming your email address.</source>
-        <target>Hesabınız oluşturuldu ancak eposta adresinizin teyit edilerek aktifleştirilmesi gerekiyor.</target>
+        <target>Hesabınız oluşturuldu ve e-posta adresinizi teyit ederek aktifleştirilmesi gerekiyor.</target>
         <note priority="1" from="description">activation pending: what is it</note>
       </trans-unit>
       <trans-unit id="250539212474752292" datatype="html">
@@ -31,6 +31,11 @@
         <source>Password must be at least <x id="PWD_MIN_LENGTH"/> characters long.</source>
         <target>Şifreniz en az <x id="PWD_MIN_LENGTH"/> karakter uzunluğunda olmalıdır.</target>
         <note priority="1" from="description">Password too short; when changing password</note>
+      </trans-unit>
+      <trans-unit id="701551202013573405" datatype="html">
+        <source><x id="START_PARAGRAPH"/>Congratulations <x id="NICKNAME"/>,<x id="START_PARAGRAPH"/>Your Ozwillo account has been validated.<x id="START_PARAGRAPH"/>The Ozwillo team<x id="START_BREAK"/><x id="START_SMALL"/>Discover <x id="START_LINK_1"/>Ozwillo<x id="END_LINK"/><x id="END_SMALL"/><x id="START_BREAK"/><x id="START_SMALL"/>Go to <x id="START_LINK_2"/>your Ozwillo dashboard<x id="END_LINK"/></source>
+        <target><x id="START_PARAGRAPH"/>Tebrikler <x id="NICKNAME"/>,<x id="START_PARAGRAPH"/>Ozwillo hesabınız doğrulandı.<x id="START_PARAGRAPH"/>Ozwillo Ekibi<x id="START_BREAK"/><id="START_SMALL"/><x id="START_LINK_1"/>Ozwillo’yu<x id="END_LINK"/> keşfedin!<x id="END_SMALL"/><x id="START_BREAK"/><x id="START_SMALL"/><x id="START_LINK_2"/>Ozwillo Kontrol Paneline<x id="END_LINK"/> gidebilirsiniz.</target>
+        <note priority="1" from="description">Welcome email body</note>
       </trans-unit>
       <trans-unit id="706458367103369348" datatype="html">
         <source>Ozwillo password reset</source>
@@ -184,7 +189,7 @@
       </trans-unit>
       <trans-unit id="3342471433315777526" datatype="html">
         <source>We've sent you an email with an activation link, click on that link to activate your account.</source>
-        <target>eposta adresinize bir aktivasyon linki gönderdik; o linke tıklayarak hesabınızı aktifleştirebilirsiniz.</target>
+        <target>Size aktivasyon linki içeren bir e-posta gönderdik; gönderilen linki tıklayarak hesabınızı aktifleştirebilirsiniz.</target>
         <note priority="1" from="description">activation pending: next steps</note>
       </trans-unit>
       <trans-unit id="3346122856114415985" datatype="html">
@@ -196,6 +201,11 @@
         <source>The application <x id="APP_INSTANCE_NAME"/> has been restored.</source>
         <target><x id="APP_INSTANCE_NAME"/> adlı uygulama geri getirildi.</target>
         <note priority="1" from="description">Stopped application instance user notification message</note>
+      </trans-unit>
+      <trans-unit id="3509186499908180001" datatype="html">
+        <source><x id="START_PARAGRAPH"/>Hello <x id="NICKNAME"/>,<x id="START_PARAGRAPH"/>You are receiving this e-mail because you have created an Ozwillo account.<x id="START_PARAGRAPH"/>In order to activate your account, please click on the following link:<x id="START_BREAK"/><x id="START_LINK_1"/><x id="ACTIVATION_LINK"/><x id="END_LINK"/><x id="START_PARAGRAPH"/>The Ozwillo team<x id="START_BREAK"/><x id="START_SMALL"/>Discover <x id="START_LINK_2"/>Ozwillo<x id="END_LINK"/><x id="END_SMALL"/></source>
+        <target><x id="START_PARAGRAPH"/>Merhaba <x id="NICKNAME"/>,<x id="START_PARAGRAPH"/>Bu e-postayı bir Ozwillo hesabı oluşturduğunuz için aldınız.<x id="START_PARAGRAPH"/>Hesabınızı aktifleştirmek için lütfen aşağıdaki linki tıklayınız:<x id="START_BREAK"/><x id="START_LINK_1"/><x id="ACTIVATION_LINK"/><x id="END_LINK"/><x id="START_PARAGRAPH"/>Ozwillo Ekibi<x id="START_BREAK"/><x id="START_SMALL"/><x id="START_LINK_2"/>Ozwillo’yu<x id="END_LINK"/> keşfedin!<x id="END_SMALL"/></target>
+        <note priority="1" from="description">Sign-up email body</note>
       </trans-unit>
       <trans-unit id="3510526964471104374" datatype="html">
         <source>Cancel and log me back in</source>
@@ -332,16 +342,6 @@
         <target>Ozwillo hesabınızı aktifleştirin.</target>
         <note priority="1" from="description">Sign-up email subject</note>
       </trans-unit>
-      <trans-unit id="6442419536401397182" datatype="html">
-        <source><x id="START_PARAGRAPH"/>Congratulations <x id="NICKNAME"/>,<x id="START_PARAGRAPH"/>Your subscription to the <x id="START_LINK"/>Ozwillo portal<x id="END_LINK"/> has been validated.</source>
-        <target><x id="START_PARAGRAPH"/>Tebrikler <x id="NICKNAME"/>,<x id="START_PARAGRAPH"/><x id="START_LINK"/>Ozwillo portalına<x id="END_LINK"/> aboneliğiniz doğrulanmıştır.</target>
-        <note priority="1" from="description">Welcome email body</note>
-      </trans-unit>
-      <trans-unit id="6649495811083440761" datatype="html">
-        <source><x id="START_PARAGRAPH"/>Hello <x id="NICKNAME"/>,<x id="START_PARAGRAPH"/>You are receiving this e-mail because you have registered on the Ozwillo portal.<x id="START_PARAGRAPH"/>In order to confirm your subscription, please click on the following link:<x id="START_BREAK"/><x id="START_LINK"/><x id="ACTIVATION_LINK"/><x id="END_LINK"/><x id="START_PARAGRAPH"/>Wishing you a nice tour on the Ozwillo portal<x id="START_PARAGRAPH"/>The Ozwillo team</source>
-        <target><x id="START_PARAGRAPH"/>Merhaba <x id="NICKNAME"/>,<x id="START_PARAGRAPH"/>Bu epostayı Ozwillo portalında kaydolduğunuz için aldınız.<x id="START_PARAGRAPH"/>Aboneliğinizi onaylamak için lütfen bu linke tıklayınız:<x id="START_BREAK"/><x id="START_LINK"/><x id="ACTIVATION_LINK"/><x id="END_LINK"/><x id="START_PARAGRAPH"/>Size Ozwillo portalında keyifli bir gezinti diliyoruz.<x id="START_PARAGRAPH"/>Ozwillo ekibi</target>
-        <note priority="1" from="description">Sign-up email body</note>
-      </trans-unit>
       <trans-unit id="6773310109171539191" datatype="html">
         <source>This link has expired. Try again below.</source>
         <target>Bu şifrenin süresi doldu. Lütfen aşağıda tekrar deneyin.</target>
@@ -374,7 +374,7 @@
       </trans-unit>
       <trans-unit id="7418322490061402095" datatype="html">
         <source>Account pending activation</source>
-        <target>Hesap aktivasyon işleminin tamamlanmasını bekliyor.</target>
+        <target>Hesap aktive edilmeyi bekliyor</target>
         <note priority="1" from="description">activation pending title</note>
       </trans-unit>
       <trans-unit id="7584118525039558774" datatype="html">
